--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "readcache",
   "version": "0.0.1",
-  "description": "Keeps a file cached in memory after reading it, until it's modified",
-  "main": "index.js",
+  "description": "Read a file and keep its contents cached until it's modified",
+  "main": "lib/readcache.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "author": "Arturo Martinez <dunkelheit@gmail.com>",
   "license": "MIT",
@@ -20,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/Dunkelheit/readcache/issues"
   },
-  "homepage": "https://github.com/Dunkelheit/readcache"
+  "homepage": "https://github.com/Dunkelheit/readcache",
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "gulp": "^3.9.0",
+    "gulp-istanbul": "^0.10.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-mocha": "^2.1.3",
+    "jshint-stylish": "^2.0.1",
+    "run-sequence": "^1.1.2"
+  }
 }
