--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "https://github.com/Dunkelheit/readcache"
   },
+  "engines": {
+    "node": ">= 0.10.25"
+  },
   "keywords": [
     "read",
     "file",
@@ -22,12 +25,16 @@
   },
   "homepage": "https://github.com/Dunkelheit/readcache",
   "devDependencies": {
+    "benchmark": "^1.0.0",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "jshint-stylish": "^2.0.1",
-    "run-sequence": "^1.1.2"
+    "microtime": "^2.0.0"
+  },
+  "dependencies": {
+    "gulp-benchmark": "^1.1.1"
   }
 }
