--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "benchmark": "^1.0.0",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-benchmark": "^1.1.1",
     "gulp-istanbul": "^0.10.0",
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "jshint-stylish": "^2.0.1",
     "microtime": "^2.0.0"
-  },
-  "dependencies": {
-    "gulp-benchmark": "^1.1.1"
   }
 }
